refactor: refactor filter btn

--- a/styles/components/_cards-block.scss
+++ b/styles/components/_cards-block.scss
@@ -310,7 +310,7 @@
       color: rgb(7, 196, 127);
       border: none;
       font-size: 2rem;
-      width: 90px;
+      width: 120%;
 
       &.sort {
         color: #000;
