--- a/styles/components/_features.scss
+++ b/styles/components/_features.scss
@@ -20,12 +20,17 @@
     width: 1100px;
   }
 
-  &__btn {
-    color: #119273;
-  }
+  // &__btn {
+  //   color: #119273;
+  // }
 
-  &__btn::after {
-    font-size: 5rem;
+  // &__btn::after {
+  //   font-size: 5rem;
+  // }
+  &__btn-next::after,  &__btn-prev::after {
+    color: #10ae73;
+    font-size: 4rem;
+    font-weight: bold;
   }
 
   &__block {
@@ -79,6 +84,14 @@
       width: 155px;
       text-align: center;
       margin-top: 1rem;
+    }
+    &__btn-next {
+      right: -5px;
+      left: auto;
+    }
+    &__btn-prev {
+      left: -5px;
+      right: auto;
     }
   }
 }
