--- a/styles/main.css
+++ b/styles/main.css
@@ -2001,6 +2001,12 @@ input {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.reviews__text {
+  width: 52%;
 }
 
 .reviews__title {
